fix: overflowed service name business page

--- a/webapp/src/main/webapp/css/business.css
+++ b/webapp/src/main/webapp/css/business.css
@@ -47,6 +47,7 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
+    height: 31px;
     width: 190px;
 }
 
